added test playlist and overflow on the y axis

--- a/index3.html
+++ b/index3.html
@@ -15,7 +15,7 @@
     <script src="./src/script2.js" type="module"></script>
     <script src="./src/musicLinks.js" type="module"></script>
     <script src="./src/fireStoreConnect.js" type="module"></script>
-        <script src="./src/audioScreen.js" type="module"></script>
+    <script src="./src/audioScreen.js" type="module"></script>
   </head>
   <body>
     <header id="main-header">
@@ -270,6 +270,22 @@
         </div>
         <div id="playlist-origin">Playing from Top Songs</div>
         <div id="playlist">
+          <div class="songs">
+            <img class="playlist-img" />
+            <div class="playlist-info">
+              <div class="playlist-songName">Basquiat</div>
+              <div class="playlist-songArtist">Asake</div>
+            </div>
+            <div class="playlist-duration">2:14</div>
+          </div>
+          <div class="songs">
+            <img class="playlist-img" />
+            <div class="playlist-info">
+              <div class="playlist-songName">Basquiat</div>
+              <div class="playlist-songArtist">Asake</div>
+            </div>
+            <div class="playlist-duration">2:14</div>
+          </div>
           <div class="songs">
             <img class="playlist-img" />
             <div class="playlist-info">
