--- a/index3.html
+++ b/index3.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANUSIC</title>
-    <link href="./musiclogo.png" rel="icon" type="image/x-icon" />
+    <link href="./favicon.ico" rel="short cut" type="image/x-icon" />
+    <link href="./favicon.ico" rel="icon" type="image/x-icon" />
     <link href="./styles/mainPage.css" rel="stylesheet" />
     <link href="./styles/artistStyle.css" rel="stylesheet" />
     <link href="./styles/audioPlayer.css" rel="stylesheet" />
@@ -270,14 +271,14 @@
         </div>
         <div id="playlist-origin">Playing from Top Songs</div>
         <div id="playlist">
-          <div class="songs">
+          <!-- <div class="songs">
             <img class="playlist-img" />
             <div class="playlist-info">
               <div class="playlist-songName">Basquiat</div>
               <div class="playlist-songArtist">Asake</div>
             </div>
             <div class="playlist-duration">2:14</div>
-          </div>
+          </div> -->
         </div>
         <div id="lyrics">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
