Audio screen now displays on click of play btn

--- a/index3.html
+++ b/index3.html
@@ -269,7 +269,7 @@
           <div class="sidebar-select-txt" id="upNext-select">UP NEXT</div>
           <div class="sidebar-select-txt" id="lyrics-select">LYRICS</div>
         </div>
-        <div id="playlist-origin">Playing from Top Songs</div>
+        <div id="playlist-origin"></div>
         <div id="playlist">
           <!-- <div class="songs">
             <img class="playlist-img" />
