Loading animmation added

--- a/index3.html
+++ b/index3.html
@@ -11,12 +11,14 @@
     <link href="./styles/artistStyle.css" rel="stylesheet" />
     <link href="./styles/audioPlayer.css" rel="stylesheet" />
     <link href="./styles/audio-screen.css" rel="stylesheet" />
+    <link href="./styles/loading.css" rel="stylesheet" />
     <script src="./src/links.js" type="module"></script>
     <script src="./src/audioPlayer.js" type="module"></script>
     <script src="./src/script2.js" type="module"></script>
     <script src="./src/musicLinks.js" type="module"></script>
     <script src="./src/fireStoreConnect.js" type="module"></script>
     <script src="./src/audioScreen.js" type="module"></script>
+    <script src="./src/loading.js" type="module"></script>
   </head>
   <body>
     <header id="main-header">
@@ -237,6 +239,7 @@
       <audio id="audio"></audio>
       <div id="left-items">
         <img id="previousBtn" />
+        <div id="Loading"></div>
         <img id="playPauseBtn" />
         <img id="nextBtn" />
         <h4 id="songDuration">NaN / NaN</h4>
