added images for artist song playlist

--- a/index3.html
+++ b/index3.html
@@ -19,6 +19,7 @@
     <script src="./src/fireStoreConnect.js" type="module"></script>
     <script src="./src/audioScreen.js" type="module"></script>
     <script src="./src/loading.js" type="module"></script>
+    <script src="./src/artistPlaylist.js" type="module"></script>
   </head>
   <body>
     <header id="main-header">
