Added Gospel Songs and Functionalities for it

--- a/index3.html
+++ b/index3.html
@@ -228,6 +228,54 @@
           <h3 class="artistName">Artist Name</h3>
         </section>
       </section>
+      <h4 id="gospelTitle" style="color: whitesmoke">Gospel Songs</h4>
+      <section class="music-card">
+        <section class="gospel">
+          <section class="gospelCover">
+            <img class="gosFave" />
+            <img class="gosAdd" />
+            <img class="gosPlay" />
+          </section>
+          <h3 class="gospelName">Song Name</h3>
+          <h3 class="gospelArtist">Gospel Artist</h3>
+        </section>
+        <section class="gospel">
+          <section class="gospelCover">
+            <img class="gosFave" />
+            <img class="gosAdd" />
+            <img class="gosPlay" />
+          </section>
+          <h3 class="gospelName">Song Name</h3>
+          <h3 class="gospelArtist">Gospel Artist</h3>
+        </section>
+        <section class="gospel">
+          <section class="gospelCover">
+            <img class="gosFave" />
+            <img class="gosAdd" />
+            <img class="gosPlay" />
+          </section>
+          <h3 class="gospelName">Song Name</h3>
+          <h3 class="gospelArtist">Gospel Artist</h3>
+        </section>
+        <section class="gospel">
+          <section class="gospelCover">
+            <img class="gosFave" />
+            <img class="gosAdd" />
+            <img class="gosPlay" />
+          </section>
+          <h3 class="gospelName">Song Name</h3>
+          <h3 class="gospelArtist">Gospel Artist</h3>
+        </section>
+        <section class="gospel">
+          <section class="gospelCover">
+            <img class="gosFave" />
+            <img class="gosAdd" />
+            <img class="gosPlay" />
+          </section>
+          <h3 class="gospelName">Song Name</h3>
+          <h3 class="gospelArtist">Gospel Artist</h3>
+        </section>
+      </section>
     </main>
     <input
       id="progressSlide"
