Updated library, favorite and home sidebar links

--- a/index3.html
+++ b/index3.html
@@ -24,7 +24,7 @@
   <body>
     <header id="main-header">
       <button class="left-items" id="main-menu"></button>
-      <a class="left-items" href="#" id="logo-link"
+      <a class="left-items" href="index3.html" id="logo-link"
         ><img src="./musiclogo.png" class="logo"
       /></a>
       <section class="left-items">
@@ -83,17 +83,17 @@
       </nav>
     </header>
     <section class="sidebar-container">
-      <a class="sidebar-link" id="home"
+      <a class="sidebar-link" id="home" href="index3.html"
         ><img src="./ICONS/home icon.png" class="sidebar" />
         <b class="sidebar-text">HOME</b></a
       >
-      <a class="sidebar-link"
+      <a class="sidebar-link" href="library.html"
         ><img src="./ICONS/library-sidebar.png" class="sidebar" /><b
           class="sidebar-text"
           >LIBRARY</b
         ></a
       >
-      <a class="sidebar-link"
+      <a class="sidebar-link" href="favorite.html"
         ><img src="./ICONS/favourite-icon-sidebar.png" class="sidebar" /><b
           class="sidebar-text"
           >FAVORITES</b
