Added experimental favorites songs layout

--- a/favorite.html
+++ b/favorite.html
@@ -6,6 +6,7 @@
     <title>Anusic</title>
     <link href="./styles/libraryMainPage.css" rel="stylesheet" />
     <script src="./src/sidebarCollapse.js" type="module"></script>
+    <script src="./src/favorite.js" type="module"></script>
   </head>
   <body>
     <header id="main-header">
@@ -86,5 +87,17 @@
         ></a
       >
     </section>
+    <main id="favoritePage">
+      <h1 id="favTitle">Favorites</h1>
+      <section class="music-card">
+        <section class="card">
+          <section class="favoriteCover">
+            <img class="play-button" />
+          </section>
+          <h3 class="songName">Song Name</h3>
+          <h3 class="songArtist">Song Artist</h3>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
