--- a/index3.html
+++ b/index3.html
@@ -20,6 +20,7 @@
     <script src="./src/audioScreen.js" type="module"></script>
     <script src="./src/loading.js" type="module"></script>
     <script src="./src/artistPlaylist.js" type="module"></script>
+    <script src="./src/favoriteBtn.js" type="module"></script>
   </head>
   <body>
     <header id="main-header">
