Removed commented  placeholder html for songs in playlist

--- a/index3.html
+++ b/index3.html
@@ -323,16 +323,7 @@
           <div class="sidebar-select-txt" id="lyrics-select">LYRICS</div>
         </div>
         <div id="playlist-origin"></div>
-        <div id="playlist">
-          <!-- <div class="songs">
-            <img class="playlist-img" />
-            <div class="playlist-info">
-              <div class="playlist-songName">Basquiat</div>
-              <div class="playlist-songArtist">Asake</div>
-            </div>
-            <div class="playlist-duration">2:14</div>
-          </div> -->
-        </div>
+        <div id="playlist"></div>
         <div id="lyrics">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
           cumque perferendis voluptatum est illo voluptate eaque in deserunt
