Added playlistSwitch.js script to the page

--- a/index3.html
+++ b/index3.html
@@ -21,6 +21,7 @@
     <script src="./src/loading.js" type="module"></script>
     <script src="./src/artistPlaylist.js" type="module"></script>
     <script src="./src/favoriteBtn.js" type="module"></script>
+    <script src="./src/playlistSwitch.js" type="module"></script>
   </head>
   <body>
     <header id="main-header">
@@ -33,19 +34,22 @@
           <img
             id="mobile-searchbar"
             src="./ICONS/search icon.png
-        " />
+        "
+          />
           <input
             type="search"
             id="mobile-search-input"
             style="height: 40px; width: 350px; border-radius: 2px; flex: 1"
-            placeholder="Search songs, artist, albums" />
+            placeholder="Search songs, artist, albums"
+          />
         </div>
 
         <input
           type="search"
           id="search-bar"
           style="height: 40px; width: 350px; border-radius: 2px; flex: 1"
-          placeholder="Search songs, artist, albums" />
+          placeholder="Search songs, artist, albums"
+        />
       </section>
       <nav class="right-items" id="profile-pic">
         <img id="profile-img" class="profile" />
@@ -59,14 +63,16 @@
             ><img
               src="./ICONS/profile.png"
               class="profile-icon"
-              alt="profile pic" />
+              alt="profile pic"
+            />
             <h4>Profile</h4></a
           >
           <a href="#" class="profile-link"
             ><img
               src="./ICONS/setting.png"
               class="profile-icon"
-              alt="settings icon" />
+              alt="settings icon"
+            />
             <h4>Settings</h4></a
           >
           <a href="#" class="profile-link"
@@ -77,7 +83,8 @@
             ><img
               src="./ICONS/logout.png"
               class="profile-icon"
-              alt="logout icon" />
+              alt="logout icon"
+            />
             <h4>Log out</h4></a
           >
         </nav>
@@ -284,7 +291,8 @@
       max="100"
       step="0.01"
       value="0"
-      type="range" />
+      type="range"
+    />
     <section id="audioPlayer">
       <audio id="audio"></audio>
       <div id="left-items">
@@ -308,7 +316,8 @@
           min="0"
           max="1"
           step="0.1"
-          value="0.5" />
+          value="0.5"
+        />
         <img id="volumeIcon" />
         <img id="repeatBtn" />
         <img id="shuffleBtn" />
