Added notify bar structure for displaying message when removing or adding favorites

--- a/index3.html
+++ b/index3.html
@@ -341,5 +341,14 @@
         </div>
       </section>
     </section>
+    <section id="notifyAction">
+      <div id="notifyText"></div>
+      <img
+        src="./ICONS/close-icon.png"
+        id="closeNotify"
+        width="40px"
+        height="40px"
+      />
+    </section>
   </body>
 </html>
