--- a/index3.html
+++ b/index3.html
@@ -21,7 +21,8 @@
     <script src="./src/loading.js" type="module"></script>
     <script src="./src/artistPlaylist.js" type="module"></script>
     <script src="./src/favoriteBtn.js" type="module"></script>
-    <script src="./src/playlistSwitch.js" type="module"></script>
+    <script src="./src/lyricsHandler.js" type="module"></script>
+    <script src="./src/playlistSwitch.js"></script>
   </head>
   <body>
     <header id="main-header">
