library button early stage implementation started

--- a/index3.html
+++ b/index3.html
@@ -23,6 +23,7 @@
     <script src="./src/favoriteBtn.js" type="module"></script>
     <script src="./src/lyricsHandler.js" type="module"></script>
     <script src="./src/playlistSwitch.js"></script>
+    <!-- <script src="./src/libraryBtn.js"></script> -->
   </head>
   <body>
     <header id="main-header">
