--- a/index3.html
+++ b/index3.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANUSIC</title>
-    <link href="./favicon.ico" rel="short cut" type="image/x-icon" />
-    <link href="./favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="./favicon.png" rel="short cut" type="image/x-icon" />
+    <link href="./favicon.png" rel="icon" type="image/x-icon" />
     <link href="./styles/mainPage.css" rel="stylesheet" />
     <link href="./styles/artistStyle.css" rel="stylesheet" />
     <link href="./styles/audioPlayer.css" rel="stylesheet" />
