updated home route

--- a/favorite.html
+++ b/favorite.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anusic</title>
+    <link href="./favicon.png" rel="short cut" type="image/x-icon" />
+    <link href="./favicon.png" rel="icon" type="image/x-icon" />
     <link href="./styles/favoriteMainPage.css" rel="stylesheet" />
     <link href="./styles/favoriteAudioplayer.css" rel="stylesheet" />
     <link href="./styles/loading.css" rel="stylesheet" />
@@ -13,8 +15,8 @@
   <body>
     <header id="main-header">
       <button class="left-items" id="main-menu"></button>
-      <a class="left-items" href="index3.html" id="logo-link"
-        ><img src="./musiclogo.png" class="logo"
+      <a class="left-items" href="./home.html" id="logo-link"
+        ><img src="./Logo/musiclogo.png" class="logo"
       /></a>
       <section class="left-items">
         <div id="mobile-search-container">
@@ -78,7 +80,7 @@
       </nav>
     </header>
     <section class="sidebar-container">
-      <a class="sidebar-link" id="home" href="./index3.html"
+      <a class="sidebar-link" id="home" href="./home.html"
         ><img src="./ICONS/home icon.png" class="sidebar" />
         <b class="sidebar-text">HOME</b></a
       >
