Added layout for playlist favorite album

--- a/favorite.html
+++ b/favorite.html
@@ -102,6 +102,20 @@
       <section class="music-card"></section>
       <h1 class="favTitle" id="favAlbum">Favorites Album</h1>
       <section class="albumMusic"></section>
+      <section class="playFaveAlbum">
+        <section class="header">
+          <section class="faveAlbumName">Album songs</section>
+          <img class="close" src="./ICONS/close-icon.png" />
+        </section>
+        <!--<section class="song">
+          <img class="songImage" src="./Artist.jpg" />
+          <section class="info">
+            <section class="name">NAME</section>
+            <section class="artist">ARTIST</section>
+          </section>
+          <img src="./ICONS/play-arrow.png" class="playButton" />
+        </section>-->
+      </section>
     </main>
     <input
       id="progressSlide"
