relinking and renamed entry point to the site

--- a/library.html
+++ b/library.html
@@ -11,7 +11,7 @@
   <body>
     <header id="main-header">
       <button class="left-items" id="main-menu"></button>
-      <a class="left-items" href="./home.html" id="logo-link"
+      <a class="left-items" href="./index.html" id="logo-link"
         ><img src="./Logo/musiclogo.png" class="logo"
       /></a>
       <section class="left-items">
@@ -76,7 +76,7 @@
       </nav>
     </header>
     <section class="sidebar-container">
-      <a class="sidebar-link" id="home" href="./home.html"
+      <a class="sidebar-link" id="home" href="./index.html"
         ><img src="./ICONS/home icon.png" class="sidebar" />
         <b class="sidebar-text">HOME</b></a
       >
